# Space-Habitat-Designer

./: .gitignore  LICENSE  Main.py  Notes  README.md  Requirements.txt  clean_nullbytes.py
backend/: habitat_model.py  rules_engine.py
cpp_backend/: CMakeLists.txt
cpp_backend/shaders/: object.frag
cpp_backend/src/: Collision.h  Evaluator.h  Geometry.h  ModulePrototypes.h  Optimizer.h  ViolationTracker.h  main.cpp
data/: module_definitions.json
frontend/: component_toolbox.py  habitat_exporter.py  habitat_viewer_3d.py  layout_metrics.py  three_d_viewer.py  ui_panels.py
frontend/pages/: page_1_landing.py  page_2_params.py  page_3_result.py
output/: layout_result.json
schemas/: habitat_mapping_schema.json
visual_generation/: generate_layout.py  schema_utils.py
